--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Stick Hero with Canvas</title>
+  <title>Stick Ninja with Canvas | A canvas game written in html, css and js to have some fun</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -13,7 +13,7 @@
   <canvas id="game" width="375" height="375"></canvas>
   <div id="introduction">Hold down the mouse to stretch out a stick</div>
   <div id="perfect">DOUBLE SCORE</div>
-  <button id="restart">RESTART</button>
+  <button id="restart">Restart</button>
 </div>
 <!-- partial -->
   <script  src="./script.js"></script>
