--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <!-- add icon link -->
+  <link rel = "icon" href="logo.png"
+  type = "png">
   <title>Stick Ninja with Canvas | A canvas game written in html, css and js to have some fun</title>
   <link rel="stylesheet" href="./style.css">
 
